@@ -1,21 +1,34 @@
 package com.example.custom_cake_system.data_access;
 
+import DTOs.CustomCakeOrderRequestDTO;
+import DTOs.CustomOrderInfoDTO;
 import DTOs.OrderDTO;
 
 import static com.example.jooq.Tables.TBL_CUSTOM_ORDER_INFO;
 import static com.example.jooq.tables.TblCakeOrders.TBL_CAKE_ORDERS;
+
+import DTOs.UserDTO;
 import com.example.jooq.tables.records.TblCakeOrdersRecord;
 import com.example.jooq.tables.records.TblCustomOrderInfoRecord;
 
 import models.Response;
 import org.jooq.DSLContext;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Repository;
 
+import java.time.LocalDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Repository
 public class OrdersRepository extends AbstractRepository {
+
+    @Autowired
+    UsersRepository usersRepository;
 
     public OrdersRepository(DSLContext context) {
         super(context);
@@ -32,10 +45,12 @@ public class OrdersRepository extends AbstractRepository {
                 
                 if (order.getCustomOrderInfo() != null) {
                     try {
-                        TblCustomOrderInfoRecord customRecord = order.getCustomOrderInfo().getRecord();
-                        _context.attach(customRecord);
-                        customRecord.setOrderId(orderRecord.getOrderId());
-                        customRecord.store();
+                        order.getCustomOrderInfo().forEach(x->{
+                            TblCustomOrderInfoRecord customRecord = x.getRecord();
+                            _context.attach(customRecord);
+                            customRecord.setOrderId(orderRecord.getOrderId());
+                            customRecord.store();
+                        });
                     } catch (Exception ex) {
                         System.err.println("Warning: Could not save custom order details: " + ex.getMessage());
                         // We allow the order to proceed even if custom details fail, 
@@ -53,10 +68,12 @@ public class OrdersRepository extends AbstractRepository {
     }
 
     public List<OrderDTO> getOrders() {
-        return _context.select(TBL_CAKE_ORDERS, TBL_CUSTOM_ORDER_INFO)
-                .from(TBL_CAKE_ORDERS)
-                .leftJoin(TBL_CUSTOM_ORDER_INFO).on(TBL_CUSTOM_ORDER_INFO.ORDER_ID.eq(TBL_CAKE_ORDERS.ORDER_ID))
-                .stream().map(OrderDTO::new).collect(Collectors.toList());
+        List<OrderDTO> dtos =  _context.selectFrom(TBL_CAKE_ORDERS).fetch().stream().map(OrderDTO::new).toList();
+        for(OrderDTO x: dtos){
+            x.setCustomOrderInfo(_context.selectFrom(TBL_CUSTOM_ORDER_INFO).fetch().stream().map(CustomOrderInfoDTO::new).toList());
+        }
+
+        return dtos;
     }
 
     public List<OrderDTO> getOrdersWithoutCustomOrderDetails() {
@@ -65,12 +82,12 @@ public class OrdersRepository extends AbstractRepository {
     }
 
     public List<OrderDTO> getOrders(int userID) {
-        return _context.select(TBL_CAKE_ORDERS, TBL_CUSTOM_ORDER_INFO)
-                .from(TBL_CAKE_ORDERS)
-                .leftJoin(TBL_CUSTOM_ORDER_INFO).on(TBL_CUSTOM_ORDER_INFO.ORDER_ID.eq(TBL_CAKE_ORDERS.ORDER_ID))
-                .where(TBL_CAKE_ORDERS.CUSTOMER_ID.eq(userID))
+        List<OrderDTO> dtos =  _context.selectFrom(TBL_CAKE_ORDERS).where(TBL_CAKE_ORDERS.CUSTOMER_ID.eq(userID)).fetch().stream().map(OrderDTO::new).toList();
+        for(OrderDTO x: dtos){
+            x.setCustomOrderInfo(_context.selectFrom(TBL_CUSTOM_ORDER_INFO).where(TBL_CUSTOM_ORDER_INFO.ORDER_ID.eq(x.getOrderId())).fetch().stream().map(CustomOrderInfoDTO::new).toList());
+        }
 
-                .stream().map(OrderDTO::new).collect(Collectors.toList());
+        return dtos;
     }
 
     public Response deleteOrder(int order_id) {
@@ -85,5 +102,32 @@ public class OrdersRepository extends AbstractRepository {
 
     public void updateOrderStatus(int orderId, String orderStatus) {
         _context.update(TBL_CAKE_ORDERS).set(TBL_CAKE_ORDERS.ORDER_STATUS, orderStatus).where(TBL_CAKE_ORDERS.ORDER_ID.eq(orderId)).execute();
+    }
+
+    public Response createCustomOrder(CustomCakeOrderRequestDTO request) {
+        String username = SecurityContextHolder.getContext().getAuthentication().getName();
+
+        UserDTO user = usersRepository.getUserDetails(username, false);
+
+        OrderDTO orderDTO = new OrderDTO();
+        List<CustomOrderInfoDTO> customOrderInfoDTOList = new ArrayList<>();
+        request.getModifiers().forEach((key, value)->{
+            CustomOrderInfoDTO customOrderInfoDTO = new CustomOrderInfoDTO();
+            customOrderInfoDTO.modifier_id = key;
+            customOrderInfoDTO.modifierValueId = (int) value;
+            customOrderInfoDTO.chosenText = request.getText();
+            customOrderInfoDTOList.add(customOrderInfoDTO);
+        });
+
+        orderDTO.setUserInfo(user);
+        orderDTO.setProductId(request.getCakeId());
+        orderDTO.setDateOfOrder(LocalDateTime.now());
+        orderDTO.setTotalPrice(request.getTotalPrice());
+        orderDTO.setOrderStatus("Pending");
+        orderDTO.setQuantity(1);
+        orderDTO.setCustomOrderInfo(customOrderInfoDTOList);
+
+        return createOrders(List.of(orderDTO));
+
     }
 }
